<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/class_item_border">

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Author"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Role" />

    <TextView
        android:id="@+id/textViewCourseType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Course_Type" />

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating" />
</LinearLayout>
