<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="313dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gartenNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gartenAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gartenCityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/City"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gartenPhoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Phone_Number"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gartenOpenTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Open_Time"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gartenCloseTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Close_Time"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gartenOrgAffiliationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Organizational_Affiliation"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/gartenImageView"
            android:layout_width="0dp"
            android:layout_height="313dp"
            android:layout_weight="1"
            android:contentDescription="Garden Image"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <!-- כפתור Select Classes -->
    <Button
        android:id="@+id/selectClassesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_Classes" />

    <!-- שאר המרכיבים בהמשך בצורה אנכית -->
    <EditText
        android:id="@+id/childId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Child_ID" />

    <EditText
        android:id="@+id/childFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FullName" />

    <EditText
        android:id="@+id/childAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Age"
        android:inputType="number" />

    <EditText
        android:id="@+id/childHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hobby" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register" />

</LinearLayout>
