<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="13dp"
    android:background="@drawable/class_item_border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"/>

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Age"/>

        <TextView
            android:id="@+id/textViewGartenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Garten"/>

        <TextView
            android:id="@+id/textViewClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Classes"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/Add_Note" />

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:text="@string/Upload_Image" />

</RelativeLayout>
