<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/gartenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/gartenAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Address" />

        <TextView
            android:id="@+id/gartenCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/City" />

        <TextView
            android:id="@+id/gartenPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone_Number" />

        <Button
            android:id="@+id/buttonSelectCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Select_Classes" />
    </LinearLayout>
</androidx.cardview.widget.CardView>