<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staff.StaffRegisterFragment">

    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/FullName"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <CheckBox
        android:id="@+id/roleTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KINDERGARTEN_TEACHER"
        app:layout_constraintTop_toBottomOf="@id/nameField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <CheckBox
        android:id="@+id/roleAssistant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ASSISTANT"
        app:layout_constraintTop_toBottomOf="@id/nameField"
        app:layout_constraintStart_toEndOf="@id/roleTeacher"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/roleTeacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <CheckBox
            android:id="@+id/roleManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KINDERGARTEN_MANAGER" />

        <CheckBox
            android:id="@+id/roleSystemAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/System_Administrator"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose_Date"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select_Date"
        android:textColor="@android:color/black"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toEndOf="@id/dateButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toTopOf="@id/loginTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Already_have_an_account_Login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
