<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewChildName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Child_Full_Name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Upload_Image"/>

    <Button
        android:id="@+id/buttonSaveImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_Image"
        android:layout_marginTop="16dp"/>



</LinearLayout>
