<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/class_item_border">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/textViewChildId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Child_ID"
        android:textSize="16sp"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/textViewClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Class_Name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textSize="16sp" />

</LinearLayout>
