<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".parents.ReviewFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rate_the_Garden"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0"
        android:layout_gravity="center" />


    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/Write_your_review_here"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:layout_gravity="center"/>

</LinearLayout>
